objects/pse__VersionItem_Milestone__c.object
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of a milestone taken at the time the version is created.</description>
    <fields>
        <fullName>pse__Actual_Date__c</fullName>
        <description>The actual date of the milestone referenced in the version.</description>
        <inlineHelpText>The actual date of the milestone referenced in the version.</inlineHelpText>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The approved status of milestone referenced in the version.</description>
        <inlineHelpText>The approved status of milestone referenced in the version.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The approved for billing status of milestone referenced in the version.</description>
        <inlineHelpText>The approved for billing status of milestone referenced in the version.</inlineHelpText>
        <label>Approved for Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Date__c</fullName>
        <inlineHelpText>The bill date for the milestone referenced in the version.</inlineHelpText>
        <label>Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The billed status for the milestone referenced in the version.</description>
        <inlineHelpText>The billed status for the milestone referenced in the version.</inlineHelpText>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The include in financials checkbox for the milestone referenced in the version.</inlineHelpText>
        <label>Include In Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Date__c</fullName>
        <inlineHelpText>The invoice date for the milestone referenced in the version.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Log_Milestone_Cost_As_External__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The log milestone cost as external checkbox for the milestone referenced in the version.</inlineHelpText>
        <label>Log Milestone Cost As External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__MilestoneName__c</fullName>
        <description>The milestone name referenced in the version.</description>
        <inlineHelpText>The milestone name referenced in the version.</inlineHelpText>
        <label>Milestone Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The milestone amount referenced in the version.</description>
        <inlineHelpText>The milestone amount referenced in the version.</inlineHelpText>
        <label>Milestone Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The milestone coast referenced in the version.</description>
        <inlineHelpText>The milestone coast referenced in the version.</inlineHelpText>
        <label>Milestone Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedById__c</fullName>
        <inlineHelpText>The created by user ID for the milestone referenced in the version.</inlineHelpText>
        <label>Original Created By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedByName__c</fullName>
        <inlineHelpText>The created by user name for the milestone referenced in the version.</inlineHelpText>
        <label>Original Created By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalCreatedDate__c</fullName>
        <description>The original created date for the milestone referenced in the version.</description>
        <inlineHelpText>The original created date for the milestone referenced in the version.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__OriginalId__c</fullName>
        <description>The original ID of the milestone referenced in the version.</description>
        <inlineHelpText>The original ID of the milestone referenced in the version.</inlineHelpText>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedById__c</fullName>
        <inlineHelpText>The modified by user ID for the milestone referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedByName__c</fullName>
        <inlineHelpText>The modified by user name for the milestone referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalLastModifiedDate__c</fullName>
        <description>The original last modified date of the milestone referenced in the version.</description>
        <inlineHelpText>The original last modified date of the milestone referenced in the version.</inlineHelpText>
        <label>Original Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__OriginalOwnerId__c</fullName>
        <inlineHelpText>The owner ID for the milestone referenced in the version.</inlineHelpText>
        <label>Original Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalOwnerName__c</fullName>
        <inlineHelpText>The owner name for the milestone referenced in the version.</inlineHelpText>
        <label>Original Owner Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Hours__c</fullName>
        <description>The planned hours for the milestone referenced in the version.</description>
        <inlineHelpText>The planned hours for the milestone referenced in the version.</inlineHelpText>
        <label>Planned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task_Hours__c</fullName>
        <description>The project task hours for the milestone referenced in the version.</description>
        <inlineHelpText>The project task hours for the milestone referenced in the version.</inlineHelpText>
        <label>Project Task Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The milestone status referenced in the version.</description>
        <inlineHelpText>The milestone status referenced in the version.</inlineHelpText>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Target_Date__c</fullName>
        <description>The target date of the milestone referenced in the version.</description>
        <inlineHelpText>The target date of the milestone referenced in the version.</inlineHelpText>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Total_Number_of_Tasks__c</fullName>
        <description>The total number of tasks of milestone referenced in the version.</description>
        <inlineHelpText>The total number of tasks of milestone referenced in the version.</inlineHelpText>
        <label>Total Number of Tasks</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Version__c</fullName>
        <description>A lookup to the Version.</description>
        <inlineHelpText>A lookup to the Version.</inlineHelpText>
        <label>Version</label>
        <referenceTo>pse__Version__c</referenceTo>
        <relationshipLabel>Version Item Milestones</relationshipLabel>
        <relationshipName>VersionItem_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Version Item Milestone</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PVM-{0000}</displayFormat>
        <label>Version Item Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>